sc-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: sc-backend
spec:
  selector:
    app: sc-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sc-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sc-backend
  template:
    metadata:
      labels:
        app: sc-backend
    spec:
      containers:
      - name: sc-backend
        image: youjung819/sc_backend:1.0
        imagePullPolicy : Always
        command: ['sh', '-c', 'echo The app is running! && sleep 3600']
        ports:
        - containerPort: 5000
