sc-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: sc-frontend-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "websocket"
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "wss"
spec:
  selector:
    app: sc-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sc-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sc-frontend
  template:
    metadata:
      labels:
        app: sc-frontend
    spec:
      containers:
        - name: sc-frontend
          image: youjung819/sc_frontend:9.1
          ports:
            - containerPort: 8080
