sc-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sc-ingress
  annotations:
    #kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/websocket-services: sc-backend-service:8080
spec:
  ingressClassName: nginx
  rules:
    - host: sc-chatting.com
      http:
        paths:
          - path: "/api"
            pathType: Prefix
            backend:
              service:
                name: sc-backend-service
                port:
                  number: 5000
          - path: "/socket.io"
            pathType: Prefix
            backend:
              service:
                name: sc-backend-service
                port:
                  number: 5000
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: sc-frontend-service
                port:
                  number: 80
